--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,54 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".SecondFragment">
 
-    <TextView
-        android:id="@+id/output_text"
+    <ScrollView
+        android:id="@+id/SCROLLER_ID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/close_btn"
-        android:layout_margin="5dp"
         android:scrollbars="vertical"
-        android:text=""
-        android:fontFamily="@font/literata"
-        android:textSize="14dp"
-        android:textColor="@color/black"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:fadeScrollbars="false"
+        android:layout_margin="5dp"
+        >
+
+        <TextView
+            android:id="@+id/output_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.0"
+            android:fillViewport="true"
+            android:keepScreenOn="true"
+            android:text=""
+            android:fontFamily="@font/literata"
+            android:textSize="16dp"
+            />
+    </ScrollView>
+
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/close_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/close"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:elevation="10dp"
         />
 
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/back_btn"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"
-        android:text="◄"
-        android:textSize="18dp"
+        android:layout_margin="16dp"
+        android:elevation="10dp"
         android:visibility="invisible"
         />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/next_btn"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_next"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
-        android:text="►"
-        android:textSize="18dp"
+        android:layout_margin="16dp"
+        android:elevation="10dp"
         android:visibility="invisible"
         />
 
 
-    <Button
-        android:id="@+id/close_btn"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:text="Close"
-    />
+
 
 
 </RelativeLayout>
